Documentation edits made through Mintlify web editor

--- a/guides/linking-a-twilio-number.mdx
+++ b/guides/linking-a-twilio-number.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Linking a Twilio number"
-description: 'Using the command-line tool to link a number and an application.'
+title: 'New file'
+description: 'Description of your new file.'
 ---
 
