Documentation edits made through Mintlify web editor

--- a/guides/linking-a-twilio-number.mdx
+++ b/guides/linking-a-twilio-number.mdx
@@ -1,5 +1,6 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: 'Linking a Twilio number'
+description: 'Using the command-line tool to link a Twilio number.'
 ---
 
+Coming soon.
