Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -157,7 +157,7 @@ Most of Fonoster's use cases require an account, the Command-line interface, and
         ```javascript call.js
         const SDK = require("@fonoster/sdk");
 
-        # Replace with your Workspace Access Key ID
+        # Replace with your Workspace Access Key Id
         const client = SDK.Client({ accessKeyId: "00000000-0000-0000-0000-000000000000" });
 
         client.loginWithApiKey("AP0eerv2g7qow3e950k7twu4rvydcunq3k", "fNc...")
