Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,7 +1,11 @@
 ---
 title: Introduction
-description: "Welcome to the home of Fonoster's documentation"
+description: "Welcome to the home of Fonoster's documentation."
 ---
+
+<Warning>
+This documentation is actively being improved. You may encounter gaps or incomplete sections as we continue to refine and expand the content. We appreciate your understanding and welcome any feedback to help us make this resource even better!
+</Warning>
 
 ## What is Fonoster?
 
