Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,9 +3,9 @@ title: Introduction
 description: "Welcome to the home of Fonoster's documentation."
 ---
 
-<Warning>
-This documentation is actively being improved. You may encounter gaps or incomplete sections as we continue to refine and expand the content. We appreciate your understanding and welcome any feedback to help us make this resource even better!
-</Warning>
+import WipDocsWarning from '/snippets/wip-docs-warning.mdx';
+
+<WipDocsWarning />
 
 ## What is Fonoster?
 
