Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -3,6 +3,10 @@ title: 'Quickstart'
 description: 'Learn how to get started with Fonoster.'
 ---
 
+import WipDocsWarning from '/snippets/wip-docs-warning.mdx';
+
+<WipDocsWarning />
+
 Most of Fonoster's use cases require an account, the Command-line interface, and a virtual phone number. This guide will walk you through the steps to start with Fonoster quickly.
 
 <Steps>
