--- a/self-hosting/first-apikeys.mdx
+++ b/self-hosting/first-apikeys.mdx
@@ -3,6 +3,10 @@ title: 'First API Keys'
 description: 'Initial setup of API keys for a self-hosted instance.'
 ---
 
+import WipDocsWarning from '/snippets/wip-docs-warning.mdx';
+
+<WipDocsWarning />
+
 Fonoster uses a Workspace-centric approach, meaning all operations are performed against a specific Workspace. By default, when you self-host Fonoster, it automatically creates a default Workspace along with a default username and password.
 
 ```text
