Documentation edits made through Mintlify web editor

--- a/self-hosting/securing-the-api.mdx
+++ b/self-hosting/securing-the-api.mdx
@@ -3,6 +3,10 @@ title: 'Securing the API'
 description: 'Securing the API with TLS.'
 ---
 
+import WipDocsWarning from '/snippets/wip-docs-warning.mdx';
+
+<WipDocsWarning />
+
 Securing Fonoster's API with Let's Encrypt certificates is essential to ensure encrypted communication. This process involves setting up a temporary Nginx server, obtaining the certificate, and configuring auto-renewal.
 
 Here are the steps to accomplish this task:
