--- a/self-hosting/overview.mdx
+++ b/self-hosting/overview.mdx
@@ -3,4 +3,8 @@ title: 'Overview'
 description: 'Self-hosting Fonoster.'
 ---
 
+import WipDocsWarning from '/snippets/wip-docs-warning.mdx';
+
+<WipDocsWarning />
+
 Self-hosting Fonoster involves running Fonoster's server on your data center. Self-hosting is helpful if you want to run Fonoster on a private network or if you want to customize Fonoster's behavior. While this offers more flexibility, it also requires more technical knowledge, and some features may not be available.
