--- a/concepts/identity-and-tokens.mdx
+++ b/concepts/identity-and-tokens.mdx
@@ -3,4 +3,8 @@ title: 'Identity and tokens'
 description: 'Users, Workspaces, API Keys, and more.'
 ---
 
+import WipDocsWarning from '/snippets/wip-docs-warning.mdx';
+
+<WipDocsWarning />
+
 Coming soon.
