--- a/concepts/sipnetwork.mdx
+++ b/concepts/sipnetwork.mdx
@@ -3,4 +3,8 @@ title: 'SIP Network'
 description: 'SIP resources in Fonoster.'
 ---
 
+import WipDocsWarning from '/snippets/wip-docs-warning.mdx';
+
+<WipDocsWarning />
+
 Coming soon.
