--- a/guides/prompting-guide.mdx
+++ b/guides/prompting-guide.mdx
@@ -3,4 +3,8 @@ title: 'Prompting guide'
 description: 'Our recommended approach to LLM prompting.'
 ---
 
+import WipDocsWarning from '/snippets/wip-docs-warning.mdx';
+
+<WipDocsWarning />
+
 Coming soon.
