--- a/concepts/calling.mdx
+++ b/concepts/calling.mdx
@@ -3,4 +3,8 @@ title: 'Calling'
 description: 'Outbound and inbound calls with Fonoster.'
 ---
 
+import WipDocsWarning from '/snippets/wip-docs-warning.mdx';
+
+<WipDocsWarning />
+
 Coming soon.
