--- a/concepts/voice-streaming.mdx
+++ b/concepts/voice-streaming.mdx
@@ -3,4 +3,8 @@ title: 'Voice streaming'
 description: 'Bidirectional voice streaming in Fonoster.'
 ---
 
+import WipDocsWarning from '/snippets/wip-docs-warning.mdx';
+
+<WipDocsWarning />
+
 Coming soon.
