--- a/concepts/workspaces.mdx
+++ b/concepts/workspaces.mdx
@@ -3,6 +3,10 @@ title: 'Workspaces'
 description: 'Workspaces are a way to group related resources.'
 ---
 
+import WipDocsWarning from '/snippets/wip-docs-warning.mdx';
+
+<WipDocsWarning />
+
 Workspaces in Fonoster allow you to organize and secure your resources. All resources within a Workspace are accessible to all members of the Workspace. Similarly, a set of API Keys created within a Workspace will have access to all resources in the Workspace according to the permissions granted to the API Key.
 
 Once a Workspace is created, you can invite other users to join the Workspace and collaborate on resources.
