--- a/guides/overwriting-speech-voices.mdx
+++ b/guides/overwriting-speech-voices.mdx
@@ -3,4 +3,8 @@ title: 'Overwriting speech voices'
 description: 'Overwriting speech voices with the `Say` verb.'
 ---
 
+import WipDocsWarning from '/snippets/wip-docs-warning.mdx';
+
+<WipDocsWarning />
+
 Coming soon.
