Documentation edits made through Mintlify web editor

--- a/self-hosting/securing-the-api.mdx
+++ b/self-hosting/securing-the-api.mdx
@@ -124,7 +124,7 @@ Here are the steps to accomplish this task:
   </Step>
 
   <Step title="Finalize settings and run the process">
-    Finally, find the Envoy container in your compose file, mount the Let's Encrypt certificates, and open port 443.
+    Finally, find the Envoy container in your compose file, mount the Let's Encrypt certificates, and open port `443`.
   </Step>
 </Steps>
 
