Documentation edits made through Mintlify web editor

--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -10,26 +10,26 @@ import WipDocsWarning from '/snippets/wip-docs-warning.mdx';
 Fonoster's Autopilot is a component within the platform that allows you to create powerful conversational experiences. It is built on top of Fonoster Programmable Voice, and takes advantage of the latest advances in large language models (LLMs) to provide a more natural and engaging experience for users.
 
 <Warning>
-The Autopilot is currently in overview mode an only available via the SDK.
+  The Autopilot is currently in overview mode an only available via the SDK.
 </Warning>
 
 ## LLM Providers and Models
 
 The Autopilot supports multiple language model providers. The following is a list of the supported providers:
 
-| Provider   | Description                                                | Supported models
-|------------|------------------------------------------------------------|--------------------------------------------------------------------------------------------|
-| OpenAI     | OpenAI provides various GPT models for conversational AI   | `gpt-4o`, `gpt-4o-mini`, `gpt-3.5-turbo`, `gpt-4-turbo`                                    |
-| Groq       | Groq offers high-performance AI models optimized for speed | `llama-3.1-8b-instant`, `llama-3.3-70b-specdec`                                            |
-| Ollama     | Self-hosted Ollama models                                  | `llama3-groq-tool-use`                                                                     |
+| Provider | Description                                                | Supported models                                        |
+| -------- | ---------------------------------------------------------- | ------------------------------------------------------- |
+| OpenAI   | OpenAI provides various GPT models for conversational AI   | `gpt-4o`, `gpt-4o-mini`, `gpt-3.5-turbo`, `gpt-4-turbo` |
+| Groq     | Groq offers high-performance AI models optimized for speed | `llama-3.1-8b-instant`, `llama-3.3-70b-specdec`         |
+| Ollama   | Self-hosted Ollama models                                  | `llama3-groq-tool-use`                                  |
 
 <Tip>
-We are constantly updating the list of supported providers and models. If you have a specific model you would like to use, please let us know.
+  We are constantly updating the list of supported providers and models. If you have a specific model you would like to use, please let us know.
 </Tip>
 
 ## Creating an Autopilot Application
 
-Use the SDK to create an Autopilot application. The following is an example of how to create a simple voice application using the OpenAI GPT-4o model:
+The following is an example of how to create an Autopilot application using the SDK:
 
 ```javascript
 import SDK from "@fonoster/sdk";
@@ -72,4 +72,3 @@ client.loginWithApiKey("AP0eerv2g7qow3e950k7twu4rvydcunq3k", "fNc...")
   .then(async() => new SDK.Applications(client).createApplication(appConfig))
   .catch(console.error);
 ```
-
