Documentation edits made through Mintlify web editor

--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -8,10 +8,10 @@ import WipDocsWarning from '/snippets/wip-docs-warning.mdx';
 <WipDocsWarning />
 
 <Warning>
-  The Autopilot is currently in overview mode and only available via the SDK and the Knowledgebase features have been disabled.
+  The Autopilot is currently in overview mode and only available via the SDK, and the Knowledgebase features have been disabled.
 </Warning>
 
-Fonoster's Autopilot is a component within the platform that allows you to create powerful conversational experiences. It is built on top of Fonoster Programmable Voice and takes advantage of the latest advances in large language models (LLMs) to provide a more natural and engaging experience for users.
+Fonoster's Autopilot is a component within the platform that allows you to create powerful conversational experiences. It is built on top of Fonoster Programmable Voice. It uses the latest advances in large language models (LLMs) to provide a more natural and engaging experience.
 
 ## Creating an Autopilot Application
 
