--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -46,6 +46,11 @@ const appConfig = {
         goodbyeMessage: "Goodbye, have a great day!",
         systemErrorMessage: "I'm sorry, I didn't understand that. Can you please repeat it?",
         maxSpeechWaitTimeout: 10000,
+        "idleOptions": {
+          "message": "Are you still there?",
+          "timeout": 10000,
+          "maxTimeoutCount": 3
+        },
         vad: {
           activationThreshold: 0.30,
           deactivationThreshold: 0.15,
