--- a/concepts/programmable-voice.mdx
+++ b/concepts/programmable-voice.mdx
@@ -36,7 +36,7 @@ Here is a list of the available verbs in Fonoster:
 
 - `Answer` - Accepts an incoming call
 - `Hangup` - Closes the call
-- `Play` - Takes a URL or file and streams the sound back to the calling party
+- `Play` - Takes a URL with a media file and streams the sound back to the calling party
 - `PlayDtmf` - Takes a DTMF sequence and plays it back to the calling party
 - `Say` - Takes a text, synthesizes the text into audio, and streams back the result
 - `Gather` - Waits for DTMF or speech events and returns back the result
